test: add test cases for service